[package]
name = "compilation_engine"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
strum.workspace = true
strum_macros.workspace = true
jack_tokenizer.workspace = true
symbol_table.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true